--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
       </figure>
     </section>
 
-    <section id="news"></section>
+    <section id="news">
+      <h3>company news</h3>
+      <p>/.///.</p>
+      
+
+    </section>
 
     <section id="details">
       <div>
