--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <section id="news">
       <h3>company news</h3>
-      <p>/.///.</p>
-      
+      <p>/.///.f ladkjflkajgdlkajg lakjdglkajglajdlkjgla</p>
+
 
     </section>
 
