--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </figure>
         </section>
 
-        <section id="news">
+        <section id="news" class="col-1">
           <h3>company news</h3>
           <p>/.///.f ladkjflkajgdlkajg lakjdglkajglajdlkjgla</p>
         </section>
