automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body>
     <div id="social">
       <a href="#">Twitter</a>
-      <a href="#">Twitter</a>
-      <a href="#">Twitter</a>
-      <a href="#">Twitter</a>
+      <a href="#">FB</a>
+      <a href="#">google+</a>
     </div>
     <header>
       <div class="wrapper">
